attempt to fix overlapping list entries on smartphones

--- a/assets/css/lists.css
+++ b/assets/css/lists.css
@@ -1,7 +1,7 @@
 article ul li :not(footer) {
-    line-height: 0.75rem;
+    line-height: 0.75em;
 }
 
 article ol li :not(footer) {
-    line-height: 0.75rem;
+    line-height: 0.75em;
 }
